Made changed to updating an appointment so it doesn't remove the team and modified how notificaitions happen when updating the appointment, lastly also added intruction button on action panel and on the other appointment areas
